Fix spacing on the right bar

--- a/opendebates/static/less/base.less
+++ b/opendebates/static/less/base.less
@@ -323,15 +323,16 @@ body > .container {
 }
 
 .main {
-  width: 66%;
+  width: 65%;
   display: inline-block;
   vertical-align: top;
 }
 
 .aside {
-  width: 33%;
+  width: 30%;
   display: inline-block;
   vertical-align: top;
+  float: right;
 }
 
 // Question order sorting
